--- a/about.html
+++ b/about.html
@@ -7,16 +7,16 @@
         <meta name="author" content="">
         <link rel="icon" href="img/favicon.png" />
       
-        <title>2nd Grouppe PAW</title>
+        <title>2nd Grouppe PAW - about</title>
 
         <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
         <link href="css/style.css" rel="stylesheet">
 </head>
 <body>
     <ul clas="main">
-        <li><a class="active" href="index.html">Home</a></li>
+        <li><a href="index.html">Home</a></li>
         <li><a href="contact.html">Contact</a></li>
-        <li><a href="about.html">About</a></li>
+        <li><a class="active" href="about.html#">About</a></li>
     </ul>
           
     <section class="section-header">
@@ -29,8 +29,8 @@
     <section style="padding: 10px;" class="main-page">
         <div style="padding:5em;" class="card">
                 <div class="container">
-                    <h1><b>Welcome!!</b></h1>
-                    <p>This Is Our Landing Page Tho..</p>
+                    <h1><b>404</b></h1>
+                    <p>Nothing To See Here..</p>
                 </div>
             </div>
     </section>
