--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <ul clas="main">
-        <li><a class="active" href="index.html">Home</a></li>
+        <li><a class="active" href="index.html#">Home</a></li>
         <li><a href="contact.html">Contact</a></li>
         <li><a href="about.html">About</a></li>
     </ul>
